<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/et_name"
        android:hint="@string/please_enter_the_name_here"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/enter_your_email_id"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_passwrod"
        android:textStyle="bold"
        android:textSize="20sp"
        android:hint="@string/enter_password_here"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_reg"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_weight=".5"
            android:onClick="register"
            android:textColor="@color/white"
            android:text="@string/register"
            android:layout_width="150dp"
            android:layout_height="100dp"/>
        <Button
            android:id="@+id/et_login"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="login"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_weight=".5"
            android:text="@string/login"
            android:layout_width="150dp"
            android:layout_height="100dp"/>

    </LinearLayout>

</LinearLayout>